Updated 'teacher-training-online/index.html' via CloudCannon

--- a/teacher-training-online/index.html
+++ b/teacher-training-online/index.html
@@ -130,7 +130,7 @@
         <center><h2>Complete the course within 12 months or take up to 3 years!&nbsp;</h2></center>
         <p class="yto-font-size">You will have instant access to the training upon purchase, so you may start immediately.&nbsp; Just login to our learning portal and go to step one on the training spiral.<br></p>
         <p class="yto-font-size">Set the pace of your own learning by progressing stepwise through the 12 modules of our training spiral. Each module of approximately 25 hours is divided into 8 study categories.<br></p>
-        <center><p class="yto-font-size">300 hours Yoga Alliance certification is awarded upon completion.<br></p>
+        <center><p class="yto-font-size">300 hours World Yoga Alliance certification is awarded upon completion.<br></p>
         <table>
           <tr>
             <td>&nbsp; <img src="https://res.cloudinary.com/shamayoga/image/upload/h_50/v1613922478/YA.png"/> </td>
