Updated 'teacher-training-online/index.html' via CloudCannon

--- a/teacher-training-online/index.html
+++ b/teacher-training-online/index.html
@@ -95,9 +95,9 @@
             <li>Monthly Zoom (2 hours+) session, to connect with the Lead Trainers on completion of each Module, for practical assessments, Q&amp;A and small group coaching</li>
         </ul>
         <center>
-          <img src="https://res.cloudinary.com/shamayoga/image/upload/v1614120494/activities.png"/><br/>
+          <img src="https://res.cloudinary.com/shamayoga/image/upload/v1614120494/activities.png"/><br/><br/>
           </center>
-        <p class="lead text-center yto-font-size"><em>To access our user-friendly yoga learning portal you can use tablet, laptop or desktop computer.&nbsp;&nbsp;Enjoy lifetime access to the course content.</em><br></p>
+        <p class="lead text-center yto-font-size"><em>To access our user-friendly yoga learning portal you can use tablet, laptop or desktop computer.<br/>Enjoy lifetime access to the course content.</em><br></p>
     </div>
 
     <div class="container">
