Updated 'teacher-training-online/index.html' via CloudCannon

--- a/teacher-training-online/index.html
+++ b/teacher-training-online/index.html
@@ -109,7 +109,7 @@
         </ul>
     </div>
         <div class="container">
-      <img src="https://res.cloudinary.com/shamayoga/image/upload/v1613920531/baddha-konasana-anatomy.jpg"/>
+      <center><img src="https://res.cloudinary.com/shamayoga/image/upload/v1613920531/baddha-konasana-anatomy.jpg"/></center>
       
     </div>
     <div class="container">
