Updated 'teacher-training-online/index.html' via CloudCannon

--- a/teacher-training-online/index.html
+++ b/teacher-training-online/index.html
@@ -154,6 +154,7 @@ delivered with his quiet, wry sense of humour.” Karen Myers 2020</blockquote>
       <blockquote class="blockquote">“I highly recommend Shamayoga, Steve is a kind and thoughtful teacher with a wealth of knowledge.” Karen Gillard 2020</blockquote>
       <blockquote class="blockquote">“Steve, I have really enjoyed working with you and loved your openness. Your attitude has been very motivating, always. You teach both physical and spiritual yoga, always inviting us to explore more.  I have been very blessed to train under your guidance. Everything is deeply appreciated.” Monica 2020</blockquote>
       <blockquote class="blockquote">“Thank you for everything - it has been such a wonderful journey that I am so glad I embarked on!”  Anna 2020</blockquote>
+      <div><a href="https://www.shamayoga.org.uk/pdfs/terms-ans-conditions.pdf" target="_blank">Terms and Conditions</a></div>
     </div>
         <center>
           <div class="container" style="max-width:600px;text-align:center;">
