Updated 'teacher-training-online/index.html' via CloudCannon

--- a/teacher-training-online/index.html
+++ b/teacher-training-online/index.html
@@ -92,7 +92,7 @@
             <li>Course notes including supporting references</li>
             <li>Illustrated, composed PDFs</li>
             <li>Quizzes and activities, digitalised, state-of-the-art tools for individual feedback</li>
-            <li>Monthly Zoom (2 hours+) session, to connect with the Lead Trainers on completion of each Module, for practical assessments, Q&amp;A and small group coaching</li>
+            <li>Monthly Zoom (2 hours) session, to connect with the Lead Trainers on completion of each Module, for practical assessments, Q&amp;A and small group coaching</li>
         </ul>
         <center>
           <img src="https://res.cloudinary.com/shamayoga/image/upload/v1614120494/activities.png"/><br/><br/>
@@ -114,7 +114,7 @@
     </div>
     <div class="container">
         <h1 class="text-center text-danger" style="color: rgb(0,0,0);"><strong>Join our Community</strong></h1>
-        <p class="yto-font-size">You can join our exclusive Shamayoga YA300 Teach Your Yoga support community and connect with other students.&nbsp; Yoga is more than a practice. It’s a way of life and we are with you all the way.</p>
+        <p class="yto-font-size">You can join our exclusive Shamayoga WYA300 Teach Your Yoga support community and connect with other students.&nbsp; Yoga is more than a practice. It’s a way of life and we are with you all the way.</p>
     </div>
     <div class="container">
         <h1 class="text-center text-danger" style="color: rgb(0,0,0);"><strong>Who is 300 hrs online Yoga Teacher Training for?&nbsp;</strong><br></h1>
