--- a/teacher-training-online/index.html
+++ b/teacher-training-online/index.html
@@ -120,7 +120,7 @@
         <h1 class="text-center text-danger" style="color: rgb(0,0,0);"><strong>Who is 300 hrs online Yoga Teacher Training for?&nbsp;</strong><br></h1>
         <ul class="sychunky yto-font-size categories-list">
           <li><strong>Experienced yoga practitioners</strong>, including those who wish to deepen their practice and understanding of yoga without necessarily wanting to teach.</li>
-            <li><strong>200 hrs yoga teachers</strong>. On completion you will be able to apply for Yoga Alliance 500 RYT (200 + 300 hrs).&nbsp;</li>
+            <li><strong>200 hrs yoga teachers</strong>. On completion you will be able to apply for World Yoga Alliance 500 RYT (200 + 300 hrs).&nbsp;</li>
             <!--<li><strong>Experienced yoga practitioners</strong>, including those who do not necessarily wish to teach.&nbsp;&nbsp;</li>-->
             <li><strong>Qualified holistic arts practitioners who are also experienced yoga practitioners</strong> including pilates, dance and martial arts.</li>
         </ul>
@@ -133,7 +133,7 @@
         <center><p class="yto-font-size">300 hours World Yoga Alliance certification is awarded upon completion.<br></p>
         <table>
           <tr>
-            <td>&nbsp; <img src="https://res.cloudinary.com/shamayoga/image/upload/h_50/v1613922478/YA.png"/> </td>
+            <td>&nbsp; <no-img src="https://res.cloudinary.com/shamayoga/image/upload/h_50/v1613922478/YA.png"/> </td>
             <td class="yto-font-size"><strong>Lead Trainers: Steve Avian(<a href="https://www.shamayoga.org.uk/steve-avian/">Bio</a>) and Susan McHale(<a href="https://www.shamayoga.org.uk/susan-mchale/">Bio</a>)
         <br/>Contributing Trainers: Katie Dickinson(<a href="https://www.shamayoga.org.uk/katie-dickinson/">Bio</a>)</strong></td>
           </tr>
