Updated 'teacher-training-online/index.html' via CloudCannon

--- a/teacher-training-online/index.html
+++ b/teacher-training-online/index.html
@@ -74,12 +74,12 @@
             <li><strong>Subtle Yoga &amp; Meditation :</strong> Deepen your awareness of pranic energy. Cultivate and unfold the extraordinary yogic potentials. Learn about your energetic anatomy - chakras, nadis, koshas, vayus, aura. Explore energy circulation, breath awareness and third eye meditations and so much more.</li>
             <li><strong>Teaching Skills:</strong> Transform knowledge into experience. Teach asanas safely, including adjustments and use of props, timing, transitioning, counterposing, sequencing, contraindications, benefits and adaptations. Design and sequence your own classes, workshops and retreats. Explore varying styles and methods of teaching, including a therapeutic framework for teaching yoga one to one. Become a versatile teacher and learn online yoga teaching skills for the 21<sup>st</sup> century.</li>
             <li><strong>Yoga Philosophy – Ancient, Medieval and Modern:</strong> Insights into the primary influences at play in Hatha Yoga from Vedic times to Patanjali - Samkhya, Yoga, Tantra, - summed up in Medieval texts such as the Hatha Yoga Pradipika, Shiva Samhita and Gherandha Samhita.  Explore contemporary yoga systems, their pioneers and innovators, in relation to the traditions of the past.</li>
-            <li><strong>Yoga Business and Marketing Success:</strong> Develop a successful marketing Mindset to launch and boost your business.  Follow a clear, stepwise plan to market your business on Social Media.  Top tips and guidance for choosing equipment and using technology</li>
+            <li><strong>Yoga Business and Marketing Success:</strong> Develop a successful marketing Mindset to launch and boost your business.  Follow a clear plan to market your business on Social Media.  Top tips and guidance for choosing equipment and using technology</li>
         </ol>
     </div>
         <center>
           <div class="container" style="max-width:600px;text-align:center;">
-           <h2>Tuition Fees Limited Time Offer<br/>Was £1200. Now <strong style="color: rgb(216, 22, 59);text-shadow: 2px 2px #fbdc95;">£900</strong></h2>
+           <h2>Tuition Fees Limited Time Offer<br/>Was £1400. Now <strong style="color: rgb(216, 22, 59);text-shadow: 2px 2px #fbdc95;">£900</strong></h2>
              <p>Instalments may be paid using 'PayPal Credit' whilst accessing the course from day one.</p>
                <div style="text-align: center;" id="paypal-button-1"></div>
           </div>
@@ -103,7 +103,7 @@
     <div class="container">
         <h1 class="text-center text-danger"><strong>Complimentary Bonuses </strong></h1>
         <ul class="yto-font-size categories-list">
-            <li>Free access to extra Shamayoga workshops<strong><em>.</em></strong></li>
+            <li>Free access to extra YTT 300 Online workshop<strong><em>.</em></strong></li>
             <li>A downloadable, original, royalty-free, ambient music album creating the perfect atmosphere for your yoga practice or teaching session.</li>
             <li>Handy links to online resources</li>
         </ul>
@@ -117,7 +117,7 @@
         <p class="yto-font-size">You can join our exclusive Shamayoga WYA300 Teach Your Yoga support community and connect with other students.&nbsp; Yoga is more than a practice. It’s a way of life and we are with you all the way.</p>
     </div>
     <div class="container">
-        <h1 class="text-center text-danger" style="color: rgb(0,0,0);"><strong>Who is 300 hrs online Yoga Teacher Training for?&nbsp;</strong><br></h1>
+        <h1 class="text-center text-danger" style="color: rgb(0,0,0);"><strong>Who is our 300 hrs online Yoga Teacher Training for?&nbsp;</strong><br></h1>
         <ul class="sychunky yto-font-size categories-list">
           <li><strong>Experienced yoga practitioners</strong>, including those who wish to deepen their practice and understanding of yoga without necessarily wanting to teach.</li>
             <li><strong>200 hrs yoga teachers</strong>. On completion you will be able to apply for World Yoga Alliance 500 RYT (200 + 300 hrs).&nbsp;</li>
@@ -129,7 +129,7 @@
         <div style="line-height:1.5em;">
         <center><h2>Complete the course within 12 months or take up to 3 years!&nbsp;</h2></center>
         <p class="yto-font-size">You will have instant access to the training upon purchase, so you may start immediately.&nbsp; Just login to our learning portal and go to step one on the training spiral.<br></p>
-        <p class="yto-font-size">Set the pace of your own learning by progressing stepwise through the 12 modules of our training spiral. Each module of approximately 25 hours is divided into 8 study categories.<br></p>
+        <p class="yto-font-size">Set the pace of your own learning by progressing step by step through the 12 modules of our training spiral. Each module of approximately 25 hours is divided into 8 study categories.<br></p>
         <center><p class="yto-font-size">300 hours World Yoga Alliance certification is awarded upon completion.<br></p>
         <table>
           <tr>
